@@ -2,6 +2,12 @@ package io.mosip.mimoto.util;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.itextpdf.html2pdf.ConverterProperties;
+import com.itextpdf.html2pdf.HtmlConverter;
+import com.itextpdf.html2pdf.resolver.font.DefaultFontProvider;
+import com.itextpdf.kernel.pdf.PdfWriter;
+import com.itextpdf.kernel.pdf.PdfDocument;
+import com.itextpdf.kernel.pdf.PdfReader;
 import io.mosip.mimoto.dto.*;
 import io.mosip.mimoto.dto.mimoto.*;
 import io.mosip.mimoto.dto.openid.VerifierDTO;
@@ -9,16 +15,22 @@ import io.mosip.mimoto.dto.openid.VerifiersDTO;
 import io.mosip.mimoto.dto.openid.datashare.DataShareResponseDTO;
 import io.mosip.mimoto.dto.openid.datashare.DataShareResponseWrapperDTO;
 import io.mosip.mimoto.dto.openid.presentation.*;
-
+import org.springframework.util.ResourceUtils;
+import java.io.InputStream;
+import java.io.ByteArrayInputStream;
+import java.io.ByteArrayOutputStream;
+import java.io.IOException;
+import java.nio.file.Files;
 import java.util.*;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import com.itextpdf.kernel.pdf.canvas.parser.PdfTextExtractor;
 
 public class TestUtilities {
 
-    public static CredentialsSupportedResponse getCredentialSupportedResponse(String credentialSupportedName){
+    public static CredentialsSupportedResponse getCredentialSupportedResponse(String credentialSupportedName) {
         LogoDTO logo = new LogoDTO();
         logo.setUrl("https://logo");
         logo.setAlt_text("logo-url");
@@ -29,28 +41,36 @@ public class TestUtilities {
         credentialSupportedDisplay.setLocale("en");
         credentialSupportedDisplay.setTextColor("#FFFFFF");
         credentialSupportedDisplay.setBackgroundColor("#B34622");
-        CredentialIssuerDisplayResponse credentialIssuerDisplayResponse = new CredentialIssuerDisplayResponse();
-        credentialIssuerDisplayResponse.setName("Given Name");
-        credentialIssuerDisplayResponse.setLocale("en");
-        CredentialDisplayResponseDto credentialDisplayResponseDto = new CredentialDisplayResponseDto();
-        credentialDisplayResponseDto.setDisplay(Collections.singletonList(credentialIssuerDisplayResponse));
+
+        CredentialIssuerDisplayResponse credentialIssuerDisplayResponseForName = new CredentialIssuerDisplayResponse();
+        credentialIssuerDisplayResponseForName.setName("Given Name");
+        credentialIssuerDisplayResponseForName.setLocale("en");
+        CredentialDisplayResponseDto credentialDisplayResponseDtoForName = new CredentialDisplayResponseDto();
+        credentialDisplayResponseDtoForName.setDisplay(List.of(credentialIssuerDisplayResponseForName));
+
+        CredentialIssuerDisplayResponse credentialIssuerDisplayResponseForEmail = new CredentialIssuerDisplayResponse();
+        credentialIssuerDisplayResponseForEmail.setName("Given Email");
+        credentialIssuerDisplayResponseForEmail.setLocale("pt");
+        CredentialDisplayResponseDto credentialDisplayResponseDtoForEmail = new CredentialDisplayResponseDto();
+        credentialDisplayResponseDtoForEmail.setDisplay(List.of(credentialIssuerDisplayResponseForEmail));
+
         CredentialDefinitionResponseDto credentialDefinitionResponseDto = new CredentialDefinitionResponseDto();
         credentialDefinitionResponseDto.setType(List.of("VerifiableCredential", credentialSupportedName));
-        credentialDefinitionResponseDto.setCredentialSubject(Map.of("name", credentialDisplayResponseDto));
+        credentialDefinitionResponseDto.setCredentialSubject(Map.of("name", credentialDisplayResponseDtoForName,"email", credentialDisplayResponseDtoForEmail));
         CredentialsSupportedResponse credentialsSupportedResponse = new CredentialsSupportedResponse();
         credentialsSupportedResponse.setFormat("ldp_vc");
-        credentialsSupportedResponse.setScope(credentialSupportedName+"_vc_ldp");
+        credentialsSupportedResponse.setScope(credentialSupportedName + "_vc_ldp");
         credentialsSupportedResponse.setDisplay(Collections.singletonList(credentialSupportedDisplay));
-        HashMap<String,ProofTypesSupported> proofTypesSupportedHashMap=new HashMap<>();
+        HashMap<String, ProofTypesSupported> proofTypesSupportedHashMap = new HashMap<>();
         ProofTypesSupported proofTypesSupported = new ProofTypesSupported();
         proofTypesSupported.setProofSigningAlgValuesSupported(List.of("RS256"));
-        proofTypesSupportedHashMap.put("jwt",proofTypesSupported);
+        proofTypesSupportedHashMap.put("jwt", proofTypesSupported);
         credentialsSupportedResponse.setProofTypesSupported(proofTypesSupportedHashMap);
         credentialsSupportedResponse.setCredentialDefinition(credentialDefinitionResponseDto);
         return credentialsSupportedResponse;
     }
 
-    public static CredentialsSupportedResponse getCredentialSupportedResponse(String credentialSupportedName, String format){
+    public static CredentialsSupportedResponse getCredentialSupportedResponse(String credentialSupportedName, String format) {
         LogoDTO logo = new LogoDTO();
         logo.setUrl("https://logo");
         logo.setAlt_text("logo-url");
@@ -68,25 +88,46 @@ public class TestUtilities {
         credentialDisplayResponseDto.setDisplay(Collections.singletonList(credentialIssuerDisplayResponse));
         CredentialsSupportedResponse credentialsSupportedResponse = new CredentialsSupportedResponse();
         credentialsSupportedResponse.setFormat(format);
-        credentialsSupportedResponse.setScope(credentialSupportedName+"_vc_"+format);
+        credentialsSupportedResponse.setScope(credentialSupportedName + "_vc_" + format);
         credentialsSupportedResponse.setDisplay(Collections.singletonList(credentialSupportedDisplay));
-        HashMap<String,ProofTypesSupported> proofTypesSupportedHashMap=new HashMap<>();
+        HashMap<String, ProofTypesSupported> proofTypesSupportedHashMap = new HashMap<>();
         ProofTypesSupported proofTypesSupported = new ProofTypesSupported();
         proofTypesSupported.setProofSigningAlgValuesSupported(List.of("RS256"));
         proofTypesSupportedHashMap.put("jwt", proofTypesSupported);
         credentialsSupportedResponse.setProofTypesSupported(proofTypesSupportedHashMap);
         credentialsSupportedResponse.setDoctype("org.iso.18018");
-        credentialsSupportedResponse.setClaims(Map.of("org.iso.18018", Map.of("given_name",Map.of("display", List.of(Map.of("name","Given Name","locale","en"))))));
+        credentialsSupportedResponse.setClaims(Map.of("org.iso.18018", Map.of("given_name", Map.of("display", List.of(Map.of("name", "Given Name", "locale", "en"))))));
         return credentialsSupportedResponse;
     }
 
-    public static CredentialIssuerWellKnownResponse getCredentialIssuerWellKnownResponseDto(String issuerName, Map<String,CredentialsSupportedResponse> credentialsSupportedResponses){
-        CredentialIssuerWellKnownResponse credentialIssuerWellKnownResponse = new CredentialIssuerWellKnownResponse();
-        credentialIssuerWellKnownResponse.setCredentialIssuer("https://dev/"+issuerName);
-        credentialIssuerWellKnownResponse.setCredentialEndPoint("https://dev/issuance/credential");
-        credentialIssuerWellKnownResponse.setAuthorizationServers(List.of("https://dev.net"));
-        credentialIssuerWellKnownResponse.setCredentialConfigurationsSupported(credentialsSupportedResponses);
+    public static CredentialIssuerWellKnownResponse getCredentialIssuerWellKnownResponseDto(String issuerName, Map<String, CredentialsSupportedResponse> credentialsSupportedResponses) {
+        CredentialIssuerWellKnownResponse credentialIssuerWellKnownResponse = new CredentialIssuerWellKnownResponse(
+                "https://dev/" + issuerName,
+                List.of("https://auth-server.env.net"),
+                "https://dev/issuance/credential",
+                credentialsSupportedResponses);
         return credentialIssuerWellKnownResponse;
+    }
+
+    public static CredentialIssuerConfigurationResponse getCredentialIssuerConfigurationResponseDto(String issuerName, String credentialType, List<String> nullFields) {
+        AuthorizationServerWellKnownResponse authorizationServerWellKnownResponse = getAuthServerWellknownResponseDto(nullFields);
+        Map<String, CredentialsSupportedResponse> credentialsSupportedResponses = Map.of(credentialType, getCredentialSupportedResponse(credentialType));
+        CredentialIssuerConfigurationResponse credentialIssuerConfigurationResponse = new CredentialIssuerConfigurationResponse("https://dev/" + issuerName, List.of("https://auth-server.env.net"), "https://dev/issuance/credential", credentialsSupportedResponses, authorizationServerWellKnownResponse);
+        return credentialIssuerConfigurationResponse;
+    }
+
+    public static AuthorizationServerWellKnownResponse getAuthServerWellknownResponseDto(List<String> nullFields) {
+        AuthorizationServerWellKnownResponse authorizationServerWellKnownResponse = new AuthorizationServerWellKnownResponse();
+        if (!nullFields.contains("authorization_endpoint")) {
+            authorizationServerWellKnownResponse.setAuthorizationEndpoint("https://dev/authorize");
+        }
+        if (!nullFields.contains("token_endpoint")) {
+            authorizationServerWellKnownResponse.setTokenEndpoint("https://dev/token");
+        }
+        if (!nullFields.contains("grant_types_supported")) {
+            authorizationServerWellKnownResponse.setGrantTypesSupported(List.of("authorization_code"));
+        }
+        return authorizationServerWellKnownResponse;
     }
 
     public static IssuerDTO getIssuerDTO(String issuerName) {
@@ -102,17 +143,18 @@ public class TestUtilities {
         IssuerDTO issuer = new IssuerDTO();
         issuer.setIssuer_id(issuerName + "id");
         issuer.setCredential_issuer(issuerName + "id");
-        issuer.setCredential_issuer_host("https://injicertify-mock.dev1.mosip.net");
+        issuer.setCredential_issuer_host("https://issuer.env.net");
         issuer.setDisplay(Collections.singletonList(display));
         issuer.setClient_id("123");
-        if (issuerName.equals("Issuer1")) issuer.setWellknown_endpoint("/well-known-proxy");
-        else {
-            issuer.setRedirect_uri(null);
-            issuer.setToken_endpoint(null);
+        issuer.setWellknown_endpoint("/well-known-proxy");
+        issuer.setProxy_token_endpoint("/well-known-proxy");
+        if (!(issuerName.equals("Issuer2") || issuerName.equals("Issuer4"))) { //use it for testing /issuers or /issuers?search=issuer2 endpoints
+            issuer.setAuthorization_audience("/well-known-proxy");
         }
         return issuer;
     }
-    public static IssuerDTO getIssuerConfigDTO(String issuerName, List<String> nullFields) {
+
+    public static IssuerDTO getIssuerConfigDTO(String issuerName) {
         LogoDTO logo = new LogoDTO();
         logo.setUrl("/logo");
         logo.setAlt_text("logo-url");
@@ -125,62 +167,50 @@ public class TestUtilities {
         IssuerDTO issuer = new IssuerDTO();
         issuer.setIssuer_id(issuerName + "id");
         issuer.setCredential_issuer(issuerName + "id");
-        issuer.setCredential_issuer_host("https://injicertify-mock.dev1.mosip.net");
         issuer.setDisplay(Collections.singletonList(display));
         issuer.setClient_id("123");
         issuer.setEnabled("true");
-        if (issuerName.equals("Issuer1")) issuer.setWellknown_endpoint("/well-known-proxy");
-        else {
-            if (!nullFields.contains("redirect_uri"))
-                issuer.setRedirect_uri("/redirection");
-            if (!nullFields.contains("authorization_audience"))
-                issuer.setAuthorization_audience("/authorization_audience");
-            if (!nullFields.contains("redirect_uri"))
-                issuer.setRedirect_uri("/redirection");
-            if (!nullFields.contains("token_endpoint"))
-                issuer.setToken_endpoint("/token_endpoint");
-            if (!nullFields.contains("proxy_token_endpoint"))
-                issuer.setProxy_token_endpoint("/proxy_token_endpoint");
-        }
+        issuer.setProtocol("OpenId4VCI");
+        issuer.setWellknown_endpoint("https://issuer.env.net/.well-known/openid-credential-issuer");
+        issuer.setCredential_issuer_host("https://issuer.env.net");
+        issuer.setAuthorization_audience("https://dev/token");
+        issuer.setProxy_token_endpoint("https://dev/token");
         return issuer;
     }
 
-    public static String getExpectedWellKnownJson() {
-        return "{"
-                + "\"credential_issuer\": \"Issuer1\","
-                + "\"credential_endpoint\": \"/credential_endpoint\","
-                + "\"credential_configurations_supported\": {"
-                + "\"CredentialType1\": {"
-                + "\"format\": \"ldp_vc\","
-                + "\"scope\": \"CredentialType1_vc_ldp\","
-                + "\"display\": [{"
-                + "\"logo\": {"
-                + "\"url\": \"/logo\","
-                + "\"alt_text\": \"logo-url\""
-                + "},"
-                + "\"name\": \"CredentialType1\","
-                + "\"locale\": \"en\","
-                + "\"text_color\": \"#FFFFFF\","
-                + "\"background_color\": \"#B34622\""
-                + "}],"
-                + "\"proof_types_supported\": {},"
-                + "\"credential_definition\": {"
-                + "\"type\": [\"VerifiableCredential\", \"CredentialType1\"],"
-                + "\"credentialSubject\": {"
-                + "\"name\": {"
-                + "\"display\": [{"
-                + "\"name\": \"Given Name\","
-                + "\"locale\": \"en\""
-                + "}]"
-                + "}"
-                + "}"
-                + "}"
-                + "}"
-                + "}"
-                + "}";
+    public static String getExpectedWellKnownJson() throws IOException {
+        return new String(Files.readAllBytes(ResourceUtils.getFile(ResourceUtils.CLASSPATH_URL_PREFIX + "responses/expectedWellknown.json").toPath())).trim();
     }
 
-    public static PresentationRequestDTO getPresentationRequestDTO(){
+    public static String getExpectedIssuersConfigJson() throws IOException {
+        return new String(Files.readAllBytes(ResourceUtils.getFile(ResourceUtils.CLASSPATH_URL_PREFIX + "responses/expectedIssuerConfig.json").toPath())).trim();
+    }
+
+    public static ByteArrayInputStream generatePdfFromHTML() {
+        String htmlContent = "<html><body><h1>PDF</h1></body></html>";
+        ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
+        PdfWriter pdfwriter = new PdfWriter(outputStream);
+        DefaultFontProvider defaultFont = new DefaultFontProvider(true, false, false);
+        ConverterProperties converterProperties = new ConverterProperties();
+        converterProperties.setFontProvider(defaultFont);
+        HtmlConverter.convertToPdf(htmlContent, pdfwriter, converterProperties);
+
+        return new ByteArrayInputStream(outputStream.toByteArray());
+    }
+
+    public static String extractTextFromPdf(InputStream pdfStream) throws IOException {
+        PdfDocument pdfDocument = new PdfDocument(new PdfReader(pdfStream));
+        StringBuilder text = new StringBuilder();
+
+        for (int i = 1; i <= pdfDocument.getNumberOfPages(); i++) {
+            text.append(PdfTextExtractor.getTextFromPage(pdfDocument.getPage(i)));
+        }
+
+        pdfDocument.close();
+        return text.toString().trim();
+    }
+
+    public static PresentationRequestDTO getPresentationRequestDTO() {
         return PresentationRequestDTO.builder()
                 .presentationDefinition(getPresentationDefinitionDTO())
                 .clientId("test_client_id")
@@ -189,7 +219,7 @@ public class TestUtilities {
                 .redirectUri("test_redirect_uri").build();
     }
 
-    public static VCCredentialProperties getVCCredentialPropertiesDTO(String type){
+    public static VCCredentialProperties getVCCredentialPropertiesDTO(String type) {
 
         ArrayList<String> contextList = new ArrayList<>();
         contextList.add("context-1");
@@ -200,10 +230,11 @@ public class TestUtilities {
         typeList.add("VCTypeCredential");
 
         Map<String, Object> credentialSubject = new HashMap<>();
-        credentialSubject.put("key1", "value1");
-        credentialSubject.put("key2", "value2");
 
-        VCCredentialResponseProof  vcCredentialResponseProof = VCCredentialResponseProof.builder()
+        credentialSubject.put("name", Map.of("name", "full name", "locale", "en"));
+        credentialSubject.put("email", Map.of("locale", "en"));
+
+        VCCredentialResponseProof vcCredentialResponseProof = VCCredentialResponseProof.builder()
                 .type(type)
                 .proofPurpose("test-proofPurpose")
                 .proofValue("test-proofValue")
@@ -221,13 +252,28 @@ public class TestUtilities {
                 .credentialSubject(credentialSubject).build();
     }
 
-    public static VCCredentialResponse getVCCredentialResponseDTO(String type){
+    public static VCCredentialRequest getVCCredentialRequestDTO() {
+        CredentialsSupportedResponse credentialsSupportedResponse = getCredentialSupportedResponse("CredentialType1");
+        return VCCredentialRequest.builder()
+                .format(credentialsSupportedResponse.getFormat())
+                .proof(VCCredentialRequestProof.builder()
+                        .proofType(credentialsSupportedResponse.getProofTypesSupported().keySet().stream().findFirst().get())
+                        .jwt("jwt")
+                        .build())
+                .credentialDefinition(VCCredentialDefinition.builder()
+                        .type(credentialsSupportedResponse.getCredentialDefinition().getType())
+                        .context(List.of("https://www.w3.org/2018/credentials/v1"))
+                        .build())
+                .build();
+    }
+
+    public static VCCredentialResponse getVCCredentialResponseDTO(String type) {
         return VCCredentialResponse.builder()
                 .credential(getVCCredentialPropertiesDTO(type))
                 .format("ldp_vc").build();
     }
 
-    public static io.mosip.mimoto.dto.idp.TokenResponseDTO getTokenResponseDTO(){
+    public static io.mosip.mimoto.dto.idp.TokenResponseDTO getTokenResponseDTO() {
         return io.mosip.mimoto.dto.idp.TokenResponseDTO.builder()
                 .id_token("test-id-token")
                 .access_token("test-accesstoken")
@@ -237,12 +283,12 @@ public class TestUtilities {
                 .build();
     }
 
-    public static PresentationDefinitionDTO getPresentationDefinitionDTO(){
+    public static PresentationDefinitionDTO getPresentationDefinitionDTO() {
         FilterDTO filterDTO = FilterDTO.builder().type("String").pattern("test-credential").build();
         FieldDTO fieldDTO = FieldDTO.builder().path(new String[]{"$.type"}).filter(filterDTO).build();
         ConstraintsDTO constraintsDTO = ConstraintsDTO.builder().fields(new FieldDTO[]{fieldDTO}).build();
         Map<String, List<String>> proofTypes = Map.of("proofTypes", Collections.singletonList("Ed25519Signature2020"));
-        Map<String, Map<String, List<String>>> format = Map.of("ldpVc", proofTypes );
+        Map<String, Map<String, List<String>>> format = Map.of("ldpVc", proofTypes);
         InputDescriptorDTO inputDescriptorDTO = InputDescriptorDTO.builder().id("test-input-id").format(format).constraints(constraintsDTO).build();
 
         return PresentationDefinitionDTO.builder()
@@ -250,7 +296,7 @@ public class TestUtilities {
                 .id("test-id").build();
     }
 
-    public static VerifiablePresentationDTO getVerifiablePresentationDTO(){
+    public static VerifiablePresentationDTO getVerifiablePresentationDTO() {
         List<String> contextList = new ArrayList<>();
         contextList.add("https://www.w3.org/2018/credentials/v1");
 
@@ -278,7 +324,7 @@ public class TestUtilities {
         return objectMapper.writeValueAsString(object);
     }
 
-    public static DataShareResponseWrapperDTO getDataShareResponseWrapperDTO(){
+    public static DataShareResponseWrapperDTO getDataShareResponseWrapperDTO() {
         ErrorDTO errorDTO = ErrorDTO.builder().errorCode("test-errorCode").errorMessage("test-errorMessage").build();
         DataShareResponseDTO dataShareResponseDTO = DataShareResponseDTO.builder()
                 .url("https://test-url")
